[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Ground Pixel (4).png" type="Texture" id=1]
[ext_resource path="res://Assets/arcade_ya/ARCADE_N.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Character-and-Zombie Resize2.png" type="Texture" id=3]
[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.317647, 0.54902, 1 )
border_width_left = 8
border_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 0, 0.45098, 0.576471, 0.52549 )
shadow_size = 5
shadow_offset = Vector2( -15, 15 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.219608, 0.384314, 1 )
border_width_left = 10
border_color = Color( 0.592157, 0.960784, 1, 1 )
shadow_color = Color( 0, 0.45098, 0.576471, 0.52549 )
shadow_size = 5
shadow_offset = Vector2( -15, 15 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.52549, 0.909804, 1 )
border_width_left = 3
border_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 0, 0.45098, 0.576471, 0.52549 )
shadow_size = 5
shadow_offset = Vector2( -15, 15 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 450, 144, 90 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 450, 144, 90 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 450, 144, 90 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 432, 450, 144, 90 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 450, 144, 90 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 540, 144, 90 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 540, 144, 90 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 540, 144, 90 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 432, 540, 144, 90 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 540, 144, 90 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 630, 144, 90 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 630, 144, 90 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 630, 144, 90 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.219608, 0.384314, 1 )
border_width_left = 10
border_color = Color( 0.592157, 0.960784, 1, 1 )
shadow_color = Color( 0, 0.45098, 0.576471, 0.52549 )
shadow_size = 5
shadow_offset = Vector2( -15, 15 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -6

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 122.0
margin_top = -291.0
margin_right = 282.0
margin_bottom = -111.0
rect_min_size = Vector2( 133, 122 )
custom_constants/separation = 15

[node name="Start_Button" type="Button" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 50 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Start_Button"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 226.0
margin_top = -23.0
margin_right = 386.0
margin_bottom = -23.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/Start_Button/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 45, 0 )
frames = SubResource( 14 )
frame = 5
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="VBoxContainer/Start_Button/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -30, 0 )
frames = SubResource( 22 )
playing = true

[node name="Options_Button" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 160.0
margin_bottom = 115.0
rect_min_size = Vector2( 160, 50 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Options"

[node name="Exit_Button" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 160.0
margin_bottom = 180.0
rect_min_size = Vector2( 160, 50 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "EXIT"

[node name="Tween" type="Tween" parent="."]

[connection signal="button_up" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_button_up"]
[connection signal="focus_entered" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_focus_exited"]
[connection signal="mouse_entered" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_mouse_exited"]
[connection signal="button_up" from="VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_button_up"]
